chapter01/grammar.c
/* A recursive-descent parser generated by peg 0.1.2 */

#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#define YYRULECOUNT 9

#include <stdio.h>
#define YYSTYPE char*
#define SIZE    128

#ifndef YY_VARIABLE
#define YY_VARIABLE(T)	static T
#endif
#ifndef YY_LOCAL
#define YY_LOCAL(T)	static T
#endif
#ifndef YY_ACTION
#define YY_ACTION(T)	static T
#endif
#ifndef YY_RULE
#define YY_RULE(T)	static T
#endif
#ifndef YY_PARSE
#define YY_PARSE(T)	T
#endif
#ifndef YYPARSE
#define YYPARSE		yyparse
#endif
#ifndef YYPARSEFROM
#define YYPARSEFROM	yyparsefrom
#endif
#ifndef YY_INPUT
#define YY_INPUT(buf, result, max_size)			\
  {							\
    int yyc= getchar();					\
    result= (EOF == yyc) ? 0 : (*(buf)= yyc, 1);	\
    yyprintf((stderr, "<%c>", yyc));			\
  }
#endif
#ifndef YY_BEGIN
#define YY_BEGIN	( yybegin= yypos, 1)
#endif
#ifndef YY_END
#define YY_END		( yyend= yypos, 1)
#endif
#ifdef YY_DEBUG
# define yyprintf(args)	fprintf args
#else
# define yyprintf(args)
#endif
#ifndef YYSTYPE
#define YYSTYPE	int
#endif

#ifndef YY_PART

typedef void (*yyaction)(char *yytext, int yyleng);
typedef struct _yythunk { int begin, end;  yyaction  action;  struct _yythunk *next; } yythunk;

YY_VARIABLE(char *   ) yybuf= 0;
YY_VARIABLE(int	     ) yybuflen= 0;
YY_VARIABLE(int	     ) yypos= 0;
YY_VARIABLE(int	     ) yylimit= 0;
YY_VARIABLE(char *   ) yytext= 0;
YY_VARIABLE(int	     ) yytextlen= 0;
YY_VARIABLE(int	     ) yybegin= 0;
YY_VARIABLE(int	     ) yyend= 0;
YY_VARIABLE(int	     ) yytextmax= 0;
YY_VARIABLE(yythunk *) yythunks= 0;
YY_VARIABLE(int	     ) yythunkslen= 0;
YY_VARIABLE(int      ) yythunkpos= 0;
YY_VARIABLE(YYSTYPE  ) yy;
YY_VARIABLE(YYSTYPE *) yyval= 0;
YY_VARIABLE(YYSTYPE *) yyvals= 0;
YY_VARIABLE(int      ) yyvalslen= 0;

YY_LOCAL(int) yyrefill(void)
{
  int yyn;
  while (yybuflen - yypos < 512)
    {
      yybuflen *= 2;
      yybuf= realloc(yybuf, yybuflen);
    }
  YY_INPUT((yybuf + yypos), yyn, (yybuflen - yypos));
  if (!yyn) return 0;
  yylimit += yyn;
  return 1;
}

YY_LOCAL(int) yymatchDot(void)
{
  if (yypos >= yylimit && !yyrefill()) return 0;
  ++yypos;
  return 1;
}

YY_LOCAL(int) yymatchChar(int c)
{
  if (yypos >= yylimit && !yyrefill()) return 0;
  if (yybuf[yypos] == c)
    {
      ++yypos;
      yyprintf((stderr, "  ok   yymatchChar(%c) @ %s\n", c, yybuf+yypos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchChar(%c) @ %s\n", c, yybuf+yypos));
  return 0;
}

YY_LOCAL(int) yymatchString(char *s)
{
  int yysav= yypos;
  while (*s)
    {
      if (yypos >= yylimit && !yyrefill()) return 0;
      if (yybuf[yypos] != *s)
        {
          yypos= yysav;
          return 0;
        }
      ++s;
      ++yypos;
    }
  return 1;
}

YY_LOCAL(int) yymatchClass(unsigned char *bits)
{
  int c;
  if (yypos >= yylimit && !yyrefill()) return 0;
  c= yybuf[yypos];
  if (bits[c >> 3] & (1 << (c & 7)))
    {
      ++yypos;
      yyprintf((stderr, "  ok   yymatchClass @ %s\n", yybuf+yypos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchClass @ %s\n", yybuf+yypos));
  return 0;
}

YY_LOCAL(void) yyDo(yyaction action, int begin, int end)
{
  while (yythunkpos >= yythunkslen)
    {
      yythunkslen *= 2;
      yythunks= realloc(yythunks, sizeof(yythunk) * yythunkslen);
    }
  yythunks[yythunkpos].begin=  begin;
  yythunks[yythunkpos].end=    end;
  yythunks[yythunkpos].action= action;
  ++yythunkpos;
}

YY_LOCAL(int) yyText(int begin, int end)
{
  int yyleng= end - begin;
  if (yyleng <= 0)
    yyleng= 0;
  else
    {
      while (yytextlen < (yyleng - 1))
	{
	  yytextlen *= 2;
	  yytext= realloc(yytext, yytextlen);
	}
      memcpy(yytext, yybuf + begin, yyleng);
    }
  yytext[yyleng]= '\0';
  return yyleng;
}

YY_LOCAL(void) yyDone(void)
{
  int pos;
  for (pos= 0;  pos < yythunkpos;  ++pos)
    {
      yythunk *thunk= &yythunks[pos];
      int yyleng= thunk->end ? yyText(thunk->begin, thunk->end) : thunk->begin;
      yyprintf((stderr, "DO [%d] %p %s\n", pos, thunk->action, yytext));
      thunk->action(yytext, yyleng);
    }
  yythunkpos= 0;
}

YY_LOCAL(void) yyCommit()
{
  if ((yylimit -= yypos))
    {
      memmove(yybuf, yybuf + yypos, yylimit);
    }
  yybegin -= yypos;
  yyend -= yypos;
  yypos= yythunkpos= 0;
}

YY_LOCAL(int) yyAccept(int tp0)
{
  if (tp0)
    {
      fprintf(stderr, "accept denied at %d\n", tp0);
      return 0;
    }
  else
    {
      yyDone();
      yyCommit();
    }
  return 1;
}

YY_LOCAL(void) yyPush(char *text, int count)	{ yyval += count; }
YY_LOCAL(void) yyPop(char *text, int count)	{ yyval -= count; }
YY_LOCAL(void) yySet(char *text, int count)	{ yyval[count]= yy; }

#endif /* YY_PART */

#define	YYACCEPT	yyAccept(yythunkpos0)

YY_RULE(int) yy_MINUS(); /* 9 */
YY_RULE(int) yy_PLUS(); /* 8 */
YY_RULE(int) yy_RBRACE(); /* 7 */
YY_RULE(int) yy_OP(); /* 6 */
YY_RULE(int) yy_LBRACE(); /* 5 */
YY_RULE(int) yy_Number(); /* 4 */
YY_RULE(int) yy_AE(); /* 3 */
YY_RULE(int) yy__(); /* 2 */
YY_RULE(int) yy_Expr(); /* 1 */

YY_ACTION(void) yy_1_MINUS(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_1_MINUS\n"));
   yy = "sub"; ;
}
YY_ACTION(void) yy_1_PLUS(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_1_PLUS\n"));
   yy = "add"; ;
}
YY_ACTION(void) yy_1_Number(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_1_Number\n"));
   yy = yytext; ;
}
YY_ACTION(void) yy_2_AE(char *yytext, int yyleng)
{
#define r yyval[-1]
#define l yyval[-2]
#define op yyval[-3]
#define n yyval[-4]
  yyprintf((stderr, "do yy_2_AE\n"));
  
                              char* buffer = malloc(sizeof(char) * SIZE);
                              sprintf(buffer, "(%s %s %s)", op, l, r);
                              yy = buffer;
                            ;
#undef r
#undef l
#undef op
#undef n
}
YY_ACTION(void) yy_1_AE(char *yytext, int yyleng)
{
#define r yyval[-1]
#define l yyval[-2]
#define op yyval[-3]
#define n yyval[-4]
  yyprintf((stderr, "do yy_1_AE\n"));
  
                              char* buffer = malloc(sizeof(char) * SIZE);
                              sprintf(buffer, "(num %s)", n);
                              yy = buffer;
                            ;
#undef r
#undef l
#undef op
#undef n
}
YY_ACTION(void) yy_1_Expr(char *yytext, int yyleng)
{
#define ae yyval[-1]
  yyprintf((stderr, "do yy_1_Expr\n"));
   printf("%s\n", ae); ;
#undef ae
}

YY_RULE(int) yy_MINUS()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "MINUS"));  if (!yymatchChar('-')) goto l1;  if (!yy__()) goto l1;  yyDo(yy_1_MINUS, yybegin, yyend);
  yyprintf((stderr, "  ok   %s @ %s\n", "MINUS", yybuf+yypos));
  return 1;
  l1:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "MINUS", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_PLUS()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "PLUS"));  if (!yymatchChar('+')) goto l2;  if (!yy__()) goto l2;  yyDo(yy_1_PLUS, yybegin, yyend);
  yyprintf((stderr, "  ok   %s @ %s\n", "PLUS", yybuf+yypos));
  return 1;
  l2:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "PLUS", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_RBRACE()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "RBRACE"));  if (!yymatchChar('}')) goto l3;  if (!yy__()) goto l3;
  yyprintf((stderr, "  ok   %s @ %s\n", "RBRACE", yybuf+yypos));
  return 1;
  l3:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "RBRACE", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_OP()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "OP"));
  {  int yypos5= yypos, yythunkpos5= yythunkpos;  if (!yy_PLUS()) goto l6;  goto l5;
  l6:;	  yypos= yypos5; yythunkpos= yythunkpos5;  if (!yy_MINUS()) goto l4;
  }
  l5:;	  if (!yy__()) goto l4;
  yyprintf((stderr, "  ok   %s @ %s\n", "OP", yybuf+yypos));
  return 1;
  l4:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "OP", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_LBRACE()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "LBRACE"));  if (!yymatchChar('{')) goto l7;  if (!yy__()) goto l7;
  yyprintf((stderr, "  ok   %s @ %s\n", "LBRACE", yybuf+yypos));
  return 1;
  l7:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "LBRACE", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_Number()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "Number"));  yyText(yybegin, yyend);  if (!(YY_BEGIN)) goto l8;  if (!yymatchClass((unsigned char *)"\000\000\000\000\000\000\377\003\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l8;
  l9:;	
  {  int yypos10= yypos, yythunkpos10= yythunkpos;  if (!yymatchClass((unsigned char *)"\000\000\000\000\000\000\377\003\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l10;  goto l9;
  l10:;	  yypos= yypos10; yythunkpos= yythunkpos10;
  }  yyText(yybegin, yyend);  if (!(YY_END)) goto l8;  if (!yy__()) goto l8;  yyDo(yy_1_Number, yybegin, yyend);
  yyprintf((stderr, "  ok   %s @ %s\n", "Number", yybuf+yypos));
  return 1;
  l8:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "Number", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_AE()
{  int yypos0= yypos, yythunkpos0= yythunkpos;  yyDo(yyPush, 4, 0);
  yyprintf((stderr, "%s\n", "AE"));
  {  int yypos12= yypos, yythunkpos12= yythunkpos;  if (!yy_Number()) goto l13;  yyDo(yySet, -4, 0);  yyDo(yy_1_AE, yybegin, yyend);  goto l12;
  l13:;	  yypos= yypos12; yythunkpos= yythunkpos12;  if (!yy_LBRACE()) goto l11;  if (!yy_OP()) goto l11;  yyDo(yySet, -3, 0);  if (!yy_AE()) goto l11;  yyDo(yySet, -2, 0);  if (!yy_AE()) goto l11;  yyDo(yySet, -1, 0);  if (!yy_RBRACE()) goto l11;  yyDo(yy_2_AE, yybegin, yyend);
  }
  l12:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "AE", yybuf+yypos));  yyDo(yyPop, 4, 0);
  return 1;
  l11:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "AE", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy__()
{
  yyprintf((stderr, "%s\n", "_"));
  l15:;	
  {  int yypos16= yypos, yythunkpos16= yythunkpos;  if (!yymatchClass((unsigned char *)"\000\002\000\000\001\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l16;  goto l15;
  l16:;	  yypos= yypos16; yythunkpos= yythunkpos16;
  }
  yyprintf((stderr, "  ok   %s @ %s\n", "_", yybuf+yypos));
  return 1;
}
YY_RULE(int) yy_Expr()
{  int yypos0= yypos, yythunkpos0= yythunkpos;  yyDo(yyPush, 1, 0);
  yyprintf((stderr, "%s\n", "Expr"));  if (!yy__()) goto l17;  if (!yy_AE()) goto l17;  yyDo(yySet, -1, 0);  if (!yy__()) goto l17;  yyDo(yy_1_Expr, yybegin, yyend);
  yyprintf((stderr, "  ok   %s @ %s\n", "Expr", yybuf+yypos));  yyDo(yyPop, 1, 0);
  return 1;
  l17:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "Expr", yybuf+yypos));
  return 0;
}

#ifndef YY_PART

typedef int (*yyrule)();

YY_PARSE(int) YYPARSEFROM(yyrule yystart)
{
  int yyok;
  if (!yybuflen)
    {
      yybuflen= 1024;
      yybuf= malloc(yybuflen);
      yytextlen= 1024;
      yytext= malloc(yytextlen);
      yythunkslen= 32;
      yythunks= malloc(sizeof(yythunk) * yythunkslen);
      yyvalslen= 32;
      yyvals= malloc(sizeof(YYSTYPE) * yyvalslen);
      yybegin= yyend= yypos= yylimit= yythunkpos= 0;
    }
  yybegin= yyend= yypos;
  yythunkpos= 0;
  yyval= yyvals;
  yyok= yystart();
  if (yyok) yyDone();
  yyCommit();
  return yyok;
  (void)yyrefill;
  (void)yymatchDot;
  (void)yymatchChar;
  (void)yymatchString;
  (void)yymatchClass;
  (void)yyDo;
  (void)yyText;
  (void)yyDone;
  (void)yyCommit;
  (void)yyAccept;
  (void)yyPush;
  (void)yyPop;
  (void)yySet;
  (void)yytextmax;
}

YY_PARSE(int) YYPARSE(void)
{
  return YYPARSEFROM(yy_Expr);
}

#endif
